--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -73,3 +73,8 @@ body {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
+
+.carousel-button:disabled {
+    opacity: .5;
+    cursor: not-allowed;
+}
